# game_of_grid

./: .gitignore  CMakeLists.txt  conf.ini  grid_of_life.cbp  grid_of_life.depend  grid_of_life.layout  main.cpp
CMake/: .CMakeList.txt.swp  CMakeCache.txt  CMakeList.txt.save  Makefile  cmake_install.cmake  conf.ini  main
src/: CMakeLists.txt  defines.h  game_grid.cpp  game_grid.h  game_of_life.cpp  game_of_life.h  main.cpp
tests/: CMakeLists.txt  catch.hpp  conf.ini  conf_test.ini  unit_tests.cpp
